--- a/src/app/recipe/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe/recipe-detail/recipe-detail.component.html
@@ -1,21 +1,40 @@
-<div class="recipe-detail">
-  <h2>{{ recipe.nombre }}</h2>
-  <img
-    class="recipe-detail-img"
-    [src]="recipe.imagen"
-    alt="{{ recipe.imagen }}"
-  />
-  <p><strong>Porciones:</strong> {{ recipe.porciones }}</p>
-  <p><strong>Tiempo:</strong> {{ recipe.tiempo_minutos }} min</p>
-  <h3>Ingredientes</h3>
-  <app-ingredient-list
-    [ingredients]="recipe.ingredientes"
-  ></app-ingredient-list>
+<div class="container mt-4">
+  <div class="card p-4">
+    <div class="row align-items-center">
+      <div class="col-md-4 text-center">
+        <img
+        class="recipe-detail-img"
+        [src]="recipe.imagen"
+        alt="{{ recipe.imagen }}"
+      />
+      </div>
+      <div class="col-md-8">
+        <h2>{{ recipe.nombre }}</h2>
+        <p><strong>Porciones:</strong> {{ recipe.porciones }}</p>
+        <p><strong>Tiempo:</strong> {{ recipe.tiempo_minutos }} min</p>
+        <p><strong>Dificultad:</strong> {{ recipe.etiquetas }}</p>
+      </div>
+    </div>
 
-  <h3>Pasos</h3>
-  <ol>
-    <li *ngFor="let step of recipe.pasos">
-      {{ step }}
-    </li>
-  </ol>
+    <hr />
+
+    <div>
+      <h4>Ingredientes</h4>
+      <app-ingredient-list
+        [ingredients]="recipe.ingredientes"
+      ></app-ingredient-list>
+    </div>
+
+    <div class="mt-4">
+      <h4>Pasos</h4>
+        <ol>
+          <li *ngFor="let paso of recipe.pasos">
+            {{ paso }}
+          </li>
+        </ol>
+
+    <div class="text-center mt-3">
+      <button class="btn btn-secondary" routerLink="/recipes">Volver</button>
+    </div>
+  </div>
 </div>
